[package]
name = "ssh_chat"
version = "0.1.0"
authors = ["Tommy Pujol <git@itstommy.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
rand = "0.8.0"
thrussh = "0.32.10"
thrussh-keys = "0.20.6"
futures = "0.3.15"
tokio = "1.8.4"
anyhow = "1.0.41"
